# nestor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/nestor/: __init__.py  cli.py  config.py  defaults.py  dependencies.py
src/nestor/agents/: __init__.py  assistant.py
src/nestor/tools/: datetime.py  weather.py  websearch.py
tests/: conftest.py
tests/agents/: test_assistant.py  test_factory.py
tests/tools/: conftest.py  test_datetime.py  test_websearch.py
