[project]
name = "nestor"
version = "0.1.0"
description = "Personal AI assistant."
authors = [
    { name = "José Fernández Ramos", email = "jose@navika.io" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "ddgs>=9.6.1",
    "httpx>=0.28.1",
    "pydantic-ai-slim[openai]>=1.2.1",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
nestor = "nestor.cli:cli"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]

[tool.uv]
package = true

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]
